--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,6 +1,33 @@
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: ggcl-gateway
 spec:
-  containers:
-    - name: ggcl-gateway
-      image: hoanghiep4298shop/ggcl-gateway:latest
-      ports:
-        - containerPort: 3000
+  replicas: 1
+  selector:
+    matchLabels:
+      app: ggcl-gateway
+  template:
+    metadata:
+      labels:
+        app: ggcl-gateway
+    spec:
+      containers:
+        - name: ggcl-gateway
+          image: hoanghiep4298shop/gateway:latest
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 3000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: ggcl-gateway
+spec:
+  type: NodePort
+  selector:
+    app: ggcl-gateway
+  ports:
+    - port: 3000
+      targetPort: 3000
+      nodePort: 30080
